param to json and front end service to add notes done
